--- a/documents-as-code-pt2/Dockerfile
+++ b/documents-as-code-pt2/Dockerfile
@@ -10,10 +10,9 @@ ENV PATH="/opt/venv/bin:$PATH"
 
 # Install dependencies with pinned versions
 RUN pip install --no-cache-dir \
-    mkdocs==1.6.1 \
+    mkdocs>=1.5 \
     mkdocs-material==9.6.2 \
-    mkdocs-material-extensions==1.3.1 \
-    pymdown-extensions[extra,mermaid]==10.14.3 \
+    "pymdown-extensions[extra,mermaid]==10.14.3" \
     mkdocs-awesome-pages-plugin
 
 # Copy docs and change ownership
